--- a/src/header/style.css
+++ b/src/header/style.css
@@ -25,6 +25,7 @@
     padding: 5px 15px;
     margin: 0;
     border: unset;
+    border-bottom-left-radius: 10px;
     background: var(--primary-color);
     font-size: 1.25rem;
     font-family: 'Roboto', sans-serif;
