--- a/src/header/style.css
+++ b/src/header/style.css
@@ -36,6 +36,14 @@
     z-index: 1000;
 }
 
+.rounded-edge {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.no-rounded-edge {
+    border-radius: 0;
+}
 .nav_ac:hover {
     color: var(--text-color-2);
 }
