feat: portfolio => border radius, hover color and img mod

--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -73,8 +73,13 @@
     padding: 4px 8px;
     text-align: center;
     font-size: 1rem;
+    text-decoration: none;
 }
 
 .po_item .content a:hover {
-    text-decoration: none;
+    color: var(--text-color-3);
+}
+
+.rounded_corners_all {
+    border-radius: 15px;
 }
